fixed a bug with nav-links not showing up on top of nav-bar

--- a/frontend/src/components/Header/Header.scss
+++ b/frontend/src/components/Header/Header.scss
@@ -14,22 +14,24 @@
 }
 
 header {
-  background-color: $cityBlue;
-  /* height: 8vh; */
-  padding: 0.5em 2.5vw;
   width: 100%;
+  background-color: $cityBlue;
+  // height: 8vh;
+  padding: 0.5em 2.5vw;
   z-index: 999;
   position: fixed;
+  top: 0;
+  left: 0;
   box-sizing: border-box;
-  margin: inherit;
+  // margin: inherit;
 
   nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    // display: flex;
+    // justify-content: space-between;
+    // align-items: center;
     max-width: 1020px;
     margin: 0 auto;
-    z-index: 2;
+    // z-index: 2;
 
     * {
       color: $offWhite;
@@ -50,16 +52,31 @@ header {
     }
 
     .nav-bar {
-      padding: 0.5em 0;
-      background-color: var(--color-primary);
+      padding: 1em 5vw;
+      background-color: $cityBlue;
       z-index: 2;
       display: flex;
       justify-content: space-between;
+      position: fixed;
+      width: 100vw;
+      box-sizing: border-box;
+      top: 0;
+      left: 0;
       .nav-title {
         text-align: left;
         padding: 0;
         margin: 0;
       }
     }
+
+    .nav-links {
+      z-index: 1;
+      transform: translateY(-111%);
+      transition: 0.2s;
+    }
   }
+}
+
+.nav-links-active {
+  transform: translateY(0) !important;
 }
